--- a/Test.html
+++ b/Test.html
@@ -1,16 +1,67 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Test Popup Agent</title>
-  </head>
-  <body>
-    <h1>Test Page for Popup Agent</h1>
-    <p>This page includes the generated agent code as a popup.</p>
+<html>
+<style>
+  /* Style for the popup window */
+  .popup {
+      display: none; /* Initially hidden */
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: 250px;
+      padding: 10px;
+      background-color: rgb(0, 255, 255);
+      border: 2px solid #000;
+      box-shadow: 0 4px 8px rgba(138, 22, 22, 0.2);
+      z-index: 1000;
+  }
 
-    <!-- Include the generated agent script -->
+  /* Dim background when popup is shown */
+  .overlay {
+      display: none; /* Initially hidden */
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.5);
+      z-index: 999;
+  }
 
-    <script import <script src="popupAgent.js"></script>
-  </body>
+  /* Button styling */
+  .button {
+      padding: 10px 20px;
+      font-size: 16px;
+      cursor: pointer;
+  }
+</style>
+</head>
+<body>
+<!-- Button to toggle the popup -->
+<button class="button" onclick="togglePopup()">Toggle Popup</button>
+
+<!-- Overlay for the popup -->
+<div id="overlay" class="overlay"></div>
+
+<!-- Popup content -->
+<div id="popup" class="popup"></div>
+
+
+<script>
+  function togglePopup() {
+      const popup = document.getElementById('popup');
+      const overlay = document.getElementById('overlay');
+
+      // Check if the popup is currently displayed
+      if (popup.style.display === 'block') {
+          popup.style.display = 'none'; // Hide popup
+          overlay.style.display = 'none'; // Hide overlay
+      } else {
+          popup.style.display = 'block'; // Show popup
+          overlay.style.display = 'block'; // Show overlay
+      }
+  }
+</script>
+<script src="popupAgent.js"></script>
+</body>
 </html>
