--- a/public/index.html
+++ b/public/index.html
@@ -269,7 +269,7 @@
               focus,
               title,
               systemMessage,
-              initialMessage,
+              initialMessages,
               promptPlaceholder,
               mode,
             }),
