--- a/Test.html
+++ b/Test.html
@@ -1,65 +1,96 @@
 <html>
-<style>
-  /* Style for the popup window */
-  .popup {
-      display: none; /* Initially hidden */
-      position: fixed;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      width: 250px;
-      padding: 10px;
-      background-color: rgb(0, 255, 255);
-      border: 2px solid #000;
-      box-shadow: 0 4px 8px rgba(138, 22, 22, 0.2);
-      z-index: 1000;
-  }
-
-  /* Dim background when popup is shown */
-  .overlay {
-      display: none; /* Initially hidden */
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-color: rgba(0, 0, 0, 0.5);
-      z-index: 999;
-  }
-
-  /* Button styling */
-  .button {
-      padding: 10px 20px;
-      font-size: 16px;
-      cursor: pointer;
-  }
-</style>
-</head>
-<body>
-<!-- Button to toggle the popup -->
-<button class="button" onclick="togglePopup()">Toggle Popup</button>
-
-<!-- Overlay for the popup -->
-<div id="overlay" class="overlay"></div>
-
-<!-- Popup content -->
-<div id="popup" class="popup"></div>
-
-<script>
-    function togglePopup() {
-      const popup = document.getElementById('popup');
-      const overlay = document.getElementById('overlay');
-
-      // Check if the popup is currently displayed
-      if (popup.style.display === 'block') {
-          popup.style.display = 'none'; // Hide popup
-          overlay.style.display = 'none'; // Hide overlay
-      } else {
-          popup.style.display = 'block'; // Show popup
-          overlay.style.display = 'block'; // Show overlay
+  <head>
+    <style>
+      /* Style for the popup container */
+      .popup {
+        display: none; /* Initially hidden */
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 1px;
+        padding: 1px;
+        background-color: rgb(185, 188, 188);
+        border: 2px solid #dedada;
+        box-shadow: 0 4px 8px rgba(138, 22, 22, 0.2);
+        z-index: 1000;
       }
-  }
-</script>
-<script src="popupAgent.js"></script>
-</body>
+
+      /* Dim background when popup is shown */
+      .overlay {
+        display: none; /* Initially hidden */
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.5);
+        z-index: 999;
+      }
+
+      /* Button styling */
+      .button {
+        padding: 10px 20px;
+        font-size: 16px;
+        cursor: pointer;
+        z-index: 1001;
+      }
+
+      /* Floating close button */
+      .close-button {
+        position: fixed;
+        top: 20px;
+        right: 20px;
+        padding: 10px;
+        background-color: red;
+        color: white;
+        border: none;
+        border-radius: 50%;
+        cursor: pointer;
+        font-size: 18px;
+        z-index: 1010; /* Higher than the overlay */
+        display: none; /* Initially hidden */
+      }
+    </style>
+  </head>
+  <body>
+    <!-- Button to toggle the popup -->
+    <button class="button" onclick="togglePopup()">Toggle Popup</button>
+
+    <!-- Overlay for the popup -->
+    <div id="overlay" class="overlay"></div>
+
+    <!-- Popup container -->
+    <div id="popup" class="popup">
+      <h1></h1>
+
+      <!-- Content will be dynamically added here -->
+    </div>
+    <button id="closeButton" class="close-button" onclick="togglePopup()">
+      X
+    </button>
+    <!-- Floating close button -->
+
+    <script>
+      function togglePopup() {
+        const popup = document.getElementById("popup");
+        const overlay = document.getElementById("overlay");
+        const closeButton = document.getElementById("closeButton");
+
+        // Check if the popup is currently displayed
+        if (overlay.style.display === "block") {
+          popup.style.display = "none"; // Hide popup
+          overlay.style.display = "none"; // Hide overlay
+          closeButton.style.display = "none"; // Hide close button
+        } else {
+          // Example of dynamically adding content to the popup
+
+          popup.style.display = "block"; // Show popup
+          overlay.style.display = "block"; // Show overlay
+          closeButton.style.display = "block"; // Show close button
+        }
+      }
+    </script>
+    <script src="popupAgent.js"></script>
+  </body>
 </html>
