--- a/public/index.html
+++ b/public/index.html
@@ -58,8 +58,7 @@
               type="text"
               name="assistantMessage"
               id="assistantMessage"
-              required />
-          ><br /><br />
+              required /><br /><br />
           <button id="createAssistant" type="button">Create or get Assistant</button
           ><br /><br />
           <label
