--- a/public/index.html
+++ b/public/index.html
@@ -59,6 +59,20 @@
               name="assistantMessage"
               id="assistantMessage"
               required /><br /><br />
+              <label for="modelSelect">Choose a model:</label>
+              <select id="modelSelect" name="model">
+                  <option value="gpt-4o-2024-08-06">gpt-4o-2024-08-06</option>
+                  <option value="gpt-4o-2024-05-13">gpt-4o-2024-05-13</option>
+                  <option value="gpt-4-turbo-preview">gpt-4-turbo-preview</option>
+                  <option value="gpt-4-turbo-2024-04-09">gpt-4-turbo-2024-04-09</option>
+                  <option value="gpt-4-turbo">gpt-4-turbo</option>
+                  <option value="gpt-4-1106-preview" selected>gpt-4-1106-preview</option>
+                  <option value="gpt-4-0613">gpt-4-0613</option>
+                  <option value="gpt-4-0125-preview">gpt-4-0125-preview</option>
+                  <option value="gpt-4">gpt-4</option>
+                  <option value="gpt-3.5-turbo-16k">gpt-3.5-turbo-16k</option>
+                  <option value="gpt-3.5-turbo-1106">gpt-3.5-turbo-1106</option>
+              </select>
           <button id="createAssistant" type="button">Create or get Assistant</button
           ><br /><br />
           <label
@@ -219,13 +233,14 @@
           const name = document.getElementById("assistant_name").value;
           const assistantMessage =
             document.getElementById("assistantMessage").value;
+          const model = document.getElementById("modelSelect").value;
 
           const response = await fetch("/create_or_get_assistant", {
             method: "POST",
             headers: {
               "Content-Type": "application/json",
             },
-            body: JSON.stringify({ name, assistantMessage }),
+            body: JSON.stringify({ name, model, assistantMessage }),
           });
 
           const result = await response.json();
